corrected footer on mobile devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,7 +57,7 @@ main {
     padding: 4rem;
     //height: 100%;
     //instead, this will  ensure footer is always at the bottom
-    min-height: calc(100vh - 60px);
+    
 
     .icons {
         margin-top: 1rem;
